Haiku/bridge/libmojobe/mojobe.h

/*!	`BRect` as C passes it: laid out the same, but without the
	user-declared copy constructor that makes C++ pass a `BRect` by
	hidden reference. */
struct mojobe_BRect {
	float	left;
	float	top;
	float	right;
	float	bottom;
};
/*!	`BPoint` as C passes it: laid out the same, but without the
	user-declared copy constructor that makes C++ pass a `BPoint` by
	hidden reference. */
struct mojobe_BPoint {
	float	x;
	float	y;
};
// void BWindow::MoveTo(BPoint arg0)
void mojobe_BWindow_MoveTo__BPoint(BWindow* self, mojobe_BPoint a_arg0);
// void BWindow::MoveTo(float x, float y)
void mojobe_BWindow_MoveTo__float_float(BWindow* self, float a_x, float a_y);
// void BWindow::ResizeBy(float dx, float dy)
void mojobe_BWindow_ResizeBy(BWindow* self, float a_dx, float a_dy);
// void BWindow::ResizeTo(float width, float height)
void mojobe_BWindow_ResizeTo(BWindow* self, float a_width, float a_height);
// void BWindow::ResizeToPreferred()
void mojobe_BWindow_ResizeToPreferred(BWindow* self);
// void BWindow::CenterIn(const BRect& rect)
void mojobe_BWindow_CenterIn(BWindow* self, mojobe_BRect a_rect);
// void BWindow::CenterOnScreen()
void mojobe_BWindow_CenterOnScreen(BWindow* self);
// void BWindow::MoveOnScreen(uint32 flags)
void mojobe_BWindow_MoveOnScreen(BWindow* self, uint32 a_flags);
// void BWindow::Hide()
void mojobe_BWindow_Hide(BWindow* self);
// bool BWindow::IsHidden() const
bool mojobe_BWindow_IsHidden(BWindow* self);
// bool BWindow::IsMinimized() const
bool mojobe_BWindow_IsMinimized(BWindow* self);
// void BWindow::Flush() const
void mojobe_BWindow_Flush(BWindow* self);
// void BWindow::Sync() const
void mojobe_BWindow_Sync(BWindow* self);
// status_t BWindow::SendBehind(const BWindow* window)
status_t mojobe_BWindow_SendBehind(BWindow* self, BWindow* a_window);
// void BWindow::DisableUpdates()
void mojobe_BWindow_DisableUpdates(BWindow* self);
// void BWindow::EnableUpdates()
void mojobe_BWindow_EnableUpdates(BWindow* self);
// void BWindow::BeginViewTransaction()
void mojobe_BWindow_BeginViewTransaction(BWindow* self);
// void BWindow::EndViewTransaction()
void mojobe_BWindow_EndViewTransaction(BWindow* self);
// bool BWindow::InViewTransaction() const
bool mojobe_BWindow_InViewTransaction(BWindow* self);
// BRect BWindow::Bounds() const
mojobe_BRect mojobe_BWindow_Bounds(BWindow* self);
// BRect BWindow::Frame() const
mojobe_BRect mojobe_BWindow_Frame(BWindow* self);
// BRect BWindow::DecoratorFrame() const
mojobe_BRect mojobe_BWindow_DecoratorFrame(BWindow* self);
// const char* BWindow::Title() const
const char* mojobe_BWindow_Title(BWindow* self);
// void BWindow::SetTitle(const char* title)
void mojobe_BWindow_SetTitle(BWindow* self, const char* a_title);
// bool BWindow::IsFront() const
bool mojobe_BWindow_IsFront(BWindow* self);
// bool BWindow::IsActive() const
bool mojobe_BWindow_IsActive(BWindow* self);
// void BWindow::SetKeyMenuBar(BMenuBar* bar)
void mojobe_BWindow_SetKeyMenuBar(BWindow* self, BMenuBar* a_bar);
// BMenuBar* BWindow::KeyMenuBar() const
BMenuBar* mojobe_BWindow_KeyMenuBar(BWindow* self);
// void BWindow::SetSizeLimits(float minWidth, float maxWidth, float minHeight, float maxHeight)
void mojobe_BWindow_SetSizeLimits(BWindow* self,
	float a_minWidth,
	float a_maxWidth,
	float a_minHeight,
	float a_maxHeight);
// void BWindow::GetSizeLimits(float* minWidth, float* maxWidth, float* minHeight, float* maxHeight)
void mojobe_BWindow_GetSizeLimits(BWindow* self,
	float * a_minWidth,
	float * a_maxWidth,
	float * a_minHeight,
	float * a_maxHeight);
// void BWindow::UpdateSizeLimits()
void mojobe_BWindow_UpdateSizeLimits(BWindow* self);
// status_t BWindow::SetDecoratorSettings(const BMessage& settings)
status_t mojobe_BWindow_SetDecoratorSettings(BWindow* self,
	BMessage* a_settings);
// status_t BWindow::GetDecoratorSettings(BMessage* settings) const
status_t mojobe_BWindow_GetDecoratorSettings(BWindow* self,
	BMessage* a_settings);
// uint32 BWindow::Workspaces() const
uint32 mojobe_BWindow_Workspaces(BWindow* self);
// void BWindow::SetWorkspaces(uint32 arg0)
void mojobe_BWindow_SetWorkspaces(BWindow* self, uint32 a_arg0);
// BView* BWindow::LastMouseMovedView() const
BView* mojobe_BWindow_LastMouseMovedView(BWindow* self);
// status_t BWindow::GetSupportedSuites(BMessage* data)
status_t mojobe_BWindow_GetSupportedSuites(BWindow* self, BMessage* a_data);
// status_t BWindow::AddToSubset(BWindow* window)
status_t mojobe_BWindow_AddToSubset(BWindow* self, BWindow* a_window);
// status_t BWindow::RemoveFromSubset(BWindow* window)
status_t mojobe_BWindow_RemoveFromSubset(BWindow* self, BWindow* a_window);
// status_t BWindow::SetType(window_type type)
status_t mojobe_BWindow_SetType(BWindow* self, window_type a_type);
// window_type BWindow::Type() const
window_type mojobe_BWindow_Type(BWindow* self);