Haiku/bridge/haiku/_api.mojo


    def MoveTo(self, arg0: BPoint):
        """`void BWindow::MoveTo(BPoint arg0)`."""
        external_call["mojobe_BWindow_MoveTo__BPoint", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::MoveTo"),
            arg0,
        )

    def MoveTo(self, x: Float32, y: Float32):
        """`void BWindow::MoveTo(float x, float y)`."""
        external_call["mojobe_BWindow_MoveTo__float_float", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::MoveTo"),
            x,
            y,
        )

    def ResizeBy(self, dx: Float32, dy: Float32):
        """`void BWindow::ResizeBy(float dx, float dy)`."""
        external_call["mojobe_BWindow_ResizeBy", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::ResizeBy"),
            dx,
            dy,
        )

    def ResizeTo(self, width: Float32, height: Float32):
        """`void BWindow::ResizeTo(float width, float height)`."""
        external_call["mojobe_BWindow_ResizeTo", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::ResizeTo"),
            width,
            height,
        )

    def ResizeToPreferred(self):
        """`void BWindow::ResizeToPreferred()`."""
        external_call["mojobe_BWindow_ResizeToPreferred", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::ResizeToPreferred"),
        )

    def CenterIn(self, rect: BRect):
        """`void BWindow::CenterIn(const BRect& rect)`."""
        external_call["mojobe_BWindow_CenterIn", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::CenterIn"),
            rect,
        )

    def CenterOnScreen(self):
        """`void BWindow::CenterOnScreen()`."""
        external_call["mojobe_BWindow_CenterOnScreen", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::CenterOnScreen"),
        )

    def MoveOnScreen(self, flags: UInt32 = 0):
        """`void BWindow::MoveOnScreen(uint32 flags)`."""
        external_call["mojobe_BWindow_MoveOnScreen", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::MoveOnScreen"),
            flags,
        )

    def Hide(self):
        """`void BWindow::Hide()`."""
        external_call["mojobe_BWindow_Hide", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::Hide"),
        )

    def IsHidden(self) -> Bool:
        """`bool BWindow::IsHidden() const`."""
        var _result = external_call["mojobe_BWindow_IsHidden", Bool](
            _nonnull(self._as_BWindow(), "BWindow::IsHidden"),
        )
        return _result

    def IsMinimized(self) -> Bool:
        """`bool BWindow::IsMinimized() const`."""
        var _result = external_call["mojobe_BWindow_IsMinimized", Bool](
            _nonnull(self._as_BWindow(), "BWindow::IsMinimized"),
        )
        return _result

    def Flush(self):
        """`void BWindow::Flush() const`."""
        external_call["mojobe_BWindow_Flush", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::Flush"),
        )

    def Sync(self):
        """`void BWindow::Sync() const`."""
        external_call["mojobe_BWindow_Sync", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::Sync"),
        )

    def SendBehind(self, window: Some[_AsBWindow]) raises:
        """`status_t BWindow::SendBehind(const BWindow* window)`."""
        var _result = external_call["mojobe_BWindow_SendBehind", Int32](
            _nonnull(self._as_BWindow(), "BWindow::SendBehind"),
            _addr(window._as_BWindow()),
        )
        _check(_result, "BWindow::SendBehind")

    def DisableUpdates(self):
        """`void BWindow::DisableUpdates()`."""
        external_call["mojobe_BWindow_DisableUpdates", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::DisableUpdates"),
        )

    def EnableUpdates(self):
        """`void BWindow::EnableUpdates()`."""
        external_call["mojobe_BWindow_EnableUpdates", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::EnableUpdates"),
        )

    def BeginViewTransaction(self):
        """`void BWindow::BeginViewTransaction()`."""
        external_call["mojobe_BWindow_BeginViewTransaction", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::BeginViewTransaction"),
        )

    def EndViewTransaction(self):
        """`void BWindow::EndViewTransaction()`."""
        external_call["mojobe_BWindow_EndViewTransaction", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::EndViewTransaction"),
        )

    def InViewTransaction(self) -> Bool:
        """`bool BWindow::InViewTransaction() const`."""
        var _result = external_call["mojobe_BWindow_InViewTransaction", Bool](
            _nonnull(self._as_BWindow(), "BWindow::InViewTransaction"),
        )
        return _result

    def Bounds(self) -> BRect:
        """`BRect BWindow::Bounds() const`."""
        var _result = external_call["mojobe_BWindow_Bounds", BRect](
            _nonnull(self._as_BWindow(), "BWindow::Bounds"),
        )
        return _result

    def Frame(self) -> BRect:
        """`BRect BWindow::Frame() const`."""
        var _result = external_call["mojobe_BWindow_Frame", BRect](
            _nonnull(self._as_BWindow(), "BWindow::Frame"),
        )
        return _result

    def DecoratorFrame(self) -> BRect:
        """`BRect BWindow::DecoratorFrame() const`."""
        var _result = external_call["mojobe_BWindow_DecoratorFrame", BRect](
            _nonnull(self._as_BWindow(), "BWindow::DecoratorFrame"),
        )
        return _result

    def Title(self) -> String:
        """`const char* BWindow::Title() const`."""
        var _result = external_call["mojobe_BWindow_Title", Int](
            _nonnull(self._as_BWindow(), "BWindow::Title"),
        )
        return _string_from(_result)

    def SetTitle(self, var title: String):
        """`void BWindow::SetTitle(const char* title)`."""
        external_call["mojobe_BWindow_SetTitle", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::SetTitle"),
            title.as_c_string_span(),
        )
        _ = title^

    def IsFront(self) -> Bool:
        """`bool BWindow::IsFront() const`."""
        var _result = external_call["mojobe_BWindow_IsFront", Bool](
            _nonnull(self._as_BWindow(), "BWindow::IsFront"),
        )
        return _result

    def IsActive(self) -> Bool:
        """`bool BWindow::IsActive() const`."""
        var _result = external_call["mojobe_BWindow_IsActive", Bool](
            _nonnull(self._as_BWindow(), "BWindow::IsActive"),
        )
        return _result

    def SetKeyMenuBar(self, bar: Some[_AsBMenuBar]):
        """`void BWindow::SetKeyMenuBar(BMenuBar* bar)`."""
        external_call["mojobe_BWindow_SetKeyMenuBar", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::SetKeyMenuBar"),
            _addr(bar._as_BMenuBar()),
        )

    def KeyMenuBar(self) -> BMenuBarRef:
        """`BMenuBar* BWindow::KeyMenuBar() const`."""
        var _result = external_call["mojobe_BWindow_KeyMenuBar", Int](
            _nonnull(self._as_BWindow(), "BWindow::KeyMenuBar"),
        )
        return BMenuBarRef(_ptr_from(_result))

    def SetSizeLimits(
        self,
        minWidth: Float32,
        maxWidth: Float32,
        minHeight: Float32,
        maxHeight: Float32,
    ):
        """`void BWindow::SetSizeLimits(float minWidth, float maxWidth, float minHeight, float maxHeight)`."""
        external_call["mojobe_BWindow_SetSizeLimits", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::SetSizeLimits"),
            minWidth,
            maxWidth,
            minHeight,
            maxHeight,
        )

    def GetSizeLimits(self) -> Tuple[Float32, Float32, Float32, Float32]:
        """`void BWindow::GetSizeLimits(float* minWidth, float* maxWidth, float* minHeight, float* maxHeight)`."""
        var minWidth = Float32(0)
        var maxWidth = Float32(0)
        var minHeight = Float32(0)
        var maxHeight = Float32(0)
        external_call["mojobe_BWindow_GetSizeLimits", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::GetSizeLimits"),
            Pointer(to=minWidth),
            Pointer(to=maxWidth),
            Pointer(to=minHeight),
            Pointer(to=maxHeight),
        )
        return (minWidth, maxWidth, minHeight, maxHeight)

    def UpdateSizeLimits(self):
        """`void BWindow::UpdateSizeLimits()`."""
        external_call["mojobe_BWindow_UpdateSizeLimits", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::UpdateSizeLimits"),
        )

    def SetDecoratorSettings(self, settings: Some[_AsBMessage]) raises:
        """`status_t BWindow::SetDecoratorSettings(const BMessage& settings)`."""
        var _result = external_call["mojobe_BWindow_SetDecoratorSettings", Int32](
            _nonnull(self._as_BWindow(), "BWindow::SetDecoratorSettings"),
            _addr(settings._as_BMessage()),
        )
        _check(_result, "BWindow::SetDecoratorSettings")

    def GetDecoratorSettings(self, settings: Some[_AsBMessage]) raises:
        """`status_t BWindow::GetDecoratorSettings(BMessage* settings) const`."""
        var _result = external_call["mojobe_BWindow_GetDecoratorSettings", Int32](
            _nonnull(self._as_BWindow(), "BWindow::GetDecoratorSettings"),
            _addr(settings._as_BMessage()),
        )
        _check(_result, "BWindow::GetDecoratorSettings")

    def Workspaces(self) -> UInt32:
        """`uint32 BWindow::Workspaces() const`."""
        var _result = external_call["mojobe_BWindow_Workspaces", UInt32](
            _nonnull(self._as_BWindow(), "BWindow::Workspaces"),
        )
        return _result

    def SetWorkspaces(self, arg0: UInt32):
        """`void BWindow::SetWorkspaces(uint32 arg0)`."""
        external_call["mojobe_BWindow_SetWorkspaces", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::SetWorkspaces"),
            arg0,
        )

    def LastMouseMovedView(self) -> BViewRef:
        """`BView* BWindow::LastMouseMovedView() const`."""
        var _result = external_call["mojobe_BWindow_LastMouseMovedView", Int](
            _nonnull(self._as_BWindow(), "BWindow::LastMouseMovedView"),
        )
        return BViewRef(_ptr_from(_result))

    def GetSupportedSuites(self, data: Some[_AsBMessage]) raises:
        """`status_t BWindow::GetSupportedSuites(BMessage* data)`."""
        var _result = external_call["mojobe_BWindow_GetSupportedSuites", Int32](
            _nonnull(self._as_BWindow(), "BWindow::GetSupportedSuites"),
            _addr(data._as_BMessage()),
        )
        _check(_result, "BWindow::GetSupportedSuites")

    def AddToSubset(self, window: Some[_AsBWindow]) raises:
        """`status_t BWindow::AddToSubset(BWindow* window)`."""
        var _result = external_call["mojobe_BWindow_AddToSubset", Int32](
            _nonnull(self._as_BWindow(), "BWindow::AddToSubset"),
            _addr(window._as_BWindow()),
        )
        _check(_result, "BWindow::AddToSubset")

    def RemoveFromSubset(self, window: Some[_AsBWindow]) raises:
        """`status_t BWindow::RemoveFromSubset(BWindow* window)`."""
        var _result = external_call["mojobe_BWindow_RemoveFromSubset", Int32](
            _nonnull(self._as_BWindow(), "BWindow::RemoveFromSubset"),
            _addr(window._as_BWindow()),
        )
        _check(_result, "BWindow::RemoveFromSubset")

    def SetType(self, type: window_type) raises:
        """`status_t BWindow::SetType(window_type type)`."""
        var _result = external_call["mojobe_BWindow_SetType", Int32](
            _nonnull(self._as_BWindow(), "BWindow::SetType"),
            type,
        )
        _check(_result, "BWindow::SetType")

    def Type(self) -> window_type:
        """`window_type BWindow::Type() const`."""
        var _result = external_call["mojobe_BWindow_Type", window_type](
            _nonnull(self._as_BWindow(), "BWindow::Type"),
        )
        return _result
